# Kirana_Store

./: .gitignore  MANIFEST.in  README.md  license.txt  setup.cfg  setup.py
kirana_ledger/: hooks.py  modules.txt  patches.txt
kirana_ledger/config/: desktop.py  docs.py
kirana_ledger/kirana_ledger/: api.py  setup.py
kirana_ledger/kirana_ledger/doctype/quick_inventory_item/: quick_inventory_item.json  quick_inventory_item.py
kirana_ledger/kirana_ledger/doctype/udhaar_customer/: udhaar_customer.json  udhaar_customer.py
kirana_ledger/kirana_ledger/doctype/udhaar_entry/: udhaar_entry.json  udhaar_entry.py
kirana_ledger/kirana_ledger/report/customers_over_credit_limit/: customers_over_credit_limit.js  customers_over_credit_limit.json  customers_over_credit_limit.py
kirana_ledger/kirana_ledger/report/daily_udhaar_summary/: daily_udhaar_summary.js  daily_udhaar_summary.json  daily_udhaar_summary.py
kirana_ledger/kirana_ledger/report/top_overdue_customers/: top_overdue_customers.js  top_overdue_customers.json  top_overdue_customers.py
kirana_ledger/kirana_ledger/workspace/udhaar_ledger/: udhaar_ledger.json
kirana_ledger/public/css/: kirana_ledger.css
kirana_ledger/public/js/: kirana_ledger.js
