[metadata]
name = Kirana Ledger
description = Hyper-Local Inventory + Udhaar Ledger for Kirana Stores
author = Pasha1234565

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires = frappe

[options.package_data]
kirana_ledger = 
    kirana_ledger/*
    kirana_ledger/**/*
    kirana_ledger/**/**/*
    kirana_ledger/**/**/**/*
    kirana_ledger/**/**/**/**/*
