[metadata]
name = kirana_ledger
description = Hyper-Local Inventory + Udhaar Ledger for Kirana Stores
author = Pasha1234565

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires = 

[options.package_data]
* = *.py, *.json, *.js, *.md, *.txt, *.css, *.html, *.svg, *.png
